syntax = "proto3";
package message;

option go_package = "message/v1;message";

//import "validate/validate.proto";
import "tagger/tagger.proto";

message MessageReceiver{
  int32 talk_type = 1; // 对话类型
  int32 receiver_id = 2;// 接受者ID
}

// 文本消息
message TextMessageRequest{
  string type = 1; // 消息类型
  string content = 4 [(tagger.tags) = "binding:\"required\""];
  string quote_id = 6; // 引用的消息ID
  MessageReceiver receiver = 7;// 消息接收者
  repeated int32 mentions = 8;
}

// 图片消息
message ImageMessageRequest{
  string type = 1;
  string url = 2 [(tagger.tags) = "binding:\"required\""]; // 图片地址
  int32 width = 3 [(tagger.tags) = "binding:\"required\""]; // 图片宽度
  int32 height = 4 [(tagger.tags) = "binding:\"required\""]; // 图片高度
  int32 size = 5 [(tagger.tags) = "binding:\"required\""]; // 图片大小
  MessageReceiver receiver = 6;// 消息接收者
  string quote_id = 7; // 引用的消息ID
}

// 语音消息
message VoiceMessageRequest{
  string type = 1;
  string url = 2 [(tagger.tags) = "binding:\"required\""];
  int32 duration = 3 [(tagger.tags) = "binding:\"required,gt=0\""];
  int32 size = 4 [(tagger.tags) = "binding:\"required\""]; // 语音大小
  MessageReceiver receiver = 5;// 消息接收者
}

// 视频文件消息
message VideoMessageRequest{
  string type = 1;
  string url = 2 [(tagger.tags) = "binding:\"required\""];
  int32 duration = 3 [(tagger.tags) = "binding:\"required,gt=0\""];
  int32 size = 4 [(tagger.tags) = "binding:\"required\""]; // 视频大小
  MessageReceiver receiver = 5;// 消息接收者
  string cover = 6; //封面图
}

// 文件消息
message FileMessageRequest{
  string type = 1;
  string upload_id = 2 [(tagger.tags) = "binding:\"required\""];
  MessageReceiver receiver = 5;// 消息接收者
}

// 代码消息
message CodeMessageRequest{
  string type = 1;
  string lang = 2 [(tagger.tags) = "binding:\"required\""];
  string code = 3 [(tagger.tags) = "binding:\"required\""];
  MessageReceiver receiver = 5;// 消息接收者
}

// 位置消息
message LocationMessageRequest{
  string type = 1;
  string longitude = 2 [(tagger.tags) = "binding:\"required\""];  // 地理位置 经度
  string latitude = 3 [(tagger.tags) = "binding:\"required\""]; // 地理位置 纬度
  string description = 4 [(tagger.tags) = "binding:\"required\""]; // 位置描述
  MessageReceiver receiver = 5;// 消息接收者
}

// 转发消息
message ForwardMessageRequest{
  string type = 1;
  int32 mode = 2 [(tagger.tags) = "binding:\"required\""];   // 转发模式
  repeated string message_ids = 3 [(tagger.tags) = "binding:\"required\""];  // 消息ID
  repeated int32 gids = 4; // 群ID列表
  repeated int32 uids = 5; // 好友ID列表
  MessageReceiver receiver = 6;// 消息接收者
}

// 投票消息
message VoteMessageRequest{
  string type = 1;
  string title = 2 [(tagger.tags) = "binding:\"required\""];  // 标题
  int32 mode = 3 [(tagger.tags) = "binding:\"required\""]; // 投票模式
  int32 anonymous = 4 [(tagger.tags) = "binding:\"required\""]; // 匿名投票
  repeated string options = 5 [(tagger.tags) = "binding:\"required\""]; // 投票选项
  MessageReceiver receiver = 6;// 消息接收者
}

// 登录消息
message LoginMessageRequest{
  string ip = 1;
  string address = 2;
  string platform = 3;
  string agent = 4;
  string reason = 5;
}

// 表情消息
message EmoticonMessageRequest{
  string type = 1;
  int32 emoticon_id = 2 [(tagger.tags) = "binding:\"required\""]; // 投票模式
  MessageReceiver receiver = 3;// 消息接收者
}


// 位置消息
message CardMessageRequest{
  string type = 1;
  int32 user_id = 2 [(tagger.tags) = "binding:\"required\""];
  MessageReceiver receiver = 3;
}

// 图文消息
message MixedMessageRequest{
  message Item{
    int32 type = 1;
    string content = 2;
  }

  string type = 1;
  repeated Item items = 2;
  MessageReceiver receiver = 3;
  string quote_id = 4; // 引用的消息ID
}